--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             android:configChanges="orientation"
             android:screenOrientation="portrait"/>
         <activity android:name=".Activity.AccountActivity"
+            android:windowSoftInputMode="stateHidden"
             android:configChanges="orientation"
             android:screenOrientation="portrait"/>
         <activity android:name=".Activity.LoginActivity"
