--- a/app/build.gradle
+++ b/app/build.gradle
@@ -222,6 +222,8 @@ dependencies {
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
 
     implementation 'com.github.prabhat1707:EasyWayLocation:2.2'
+    //ratings
+    implementation 'com.github.ome450901:SimpleRatingBar:1.3.2'
 
 
 
