--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,13 +31,12 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:largeHeap="true"
         tools:replace="android:icon, android:label"
-
         android:allowBackup="true"
         android:icon="@drawable/rezq_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Rezq">
+        android:theme="@style/AppTheme">
 
 
         <activity
